--- a/Datalabs/Datalab07/7-NumericalDiffusion.ipynb
+++ b/Datalabs/Datalab07/7-NumericalDiffusion.ipynb
@@ -2,27 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Numerical solution to the diffusion equation\n",
     "\n",
     "Please indicate your name below, since you will need to submit this notebook completed latest the day after the datalab.\n",
     "\n",
     "Don't forget to save your progress during the datalab to avoid any loss due to crashes."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
-    "name=''"
-   ]
+    "name='Jens aka Snowdog'"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "In realistic reactor calculations the analytical solution of the transport, or even the diffusion equation is usually not possible (for example due to the heterogenities in the reactor, such as fuel rods, cladding, moderator channels, etc).\n",
     "\n",
@@ -81,7 +80,7 @@
     "\n",
     "where $\\underline{\\underline{A}}$ is made of the above defined coefficients:\n",
     "\n",
-    "\\begin{equation}\n",
+    "$\\begin{equation}\n",
     "\\begin{pmatrix}\n",
     "a_{1,1} & a_{1,2} & 0 & 0 & 0 & \\cdots \\\\\n",
     "a_{2,1} & a_{2,2} & a_{2,3} & 0 & 0 & \\cdots \\\\\n",
@@ -89,27 +88,27 @@
     "0 & 0 & a_{4,3} & a_{4,4} & a_{4,5} & \\cdots  \\\\\n",
     "\\vdots & \\vdots & \\vdots & \\vdots & \\vdots & \\vdots &\n",
     "\\end{pmatrix}\n",
-    "\\end{equation}\n",
+    "\\end{equation}$\n",
     "\n",
     "and the vector $\\underline{\\phi}$ is simply the flux at the discrete locations\n",
-    "\n",
+    "$\n",
     "\\begin{equation}\n",
     "\\begin{pmatrix}\n",
     "\\phi_1 \\\\ \\phi_2 \\\\ \\phi_3 \\\\ \\vdots \\\\ \\phi_{N-2} \\\\ \\phi_{N-1}\n",
     "\\end{pmatrix}\n",
     "\\end{equation}\n",
-    "\n",
+    "$\n",
     "\n",
     "this is what we seek as the solution!\n",
     "\n",
     "And $\\underline{S}$ is the source at different locations. \n",
-    "\n",
+    "$\n",
     "\\begin{equation}\n",
     "\\begin{pmatrix}\n",
     "S_1 \\\\ S_2 \\\\ S_3 \\\\ \\vdots \\\\ S_{N-2} \\\\ S_{N-1}\n",
     "\\end{pmatrix}\n",
     "\\end{equation}\n",
-    "\n",
+    "$\n",
     "\n",
     "which is an input. For example we could have just a plane source (only one non-zero value).\n",
     "\n",
@@ -120,13 +119,12 @@
     "The problem could be further developed by assuming that $D$ and $\\Sigma_a$ also depend on the spatial coordinate. And the problem is similar in multiple dimensions. However for the current exercise we can consider the simplest case, with constant $D$ and $\\Sigma_a$ in a finite one-dimensional geometry.\n",
     "\n",
     "Once we implement matrix $\\underline{\\underline{A}}$, we can use numpy's linear algebra module to solve such matrix equations: `flux=np.linalg.solve(A,S)`. So let's do that! Implement the matrix below, then execute the code block!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -150,20 +148,20 @@
     "    for i in range(1,N):\n",
     "        #write code to create matrix A\n",
     "    return A"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "And now let's use this. We can first solve for a case when there is a source plane at the center of the slab. Execute the code below."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Input data\n",
     "a=100\n",
@@ -189,20 +187,20 @@
     "plt.xlabel('x')\n",
     "plt.ylabel(r'$\\phi(x)/\\phi_0$')\n",
     "plt.show()\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Now define a source which is uniform all over the slab. What shape do you expect for the flux?"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Define the source and place a source in the middle\n",
     "S=#complete the line\n",
@@ -215,34 +213,35 @@
     "plt.xlabel('x')\n",
     "plt.ylabel(r'$\\phi(x)/\\phi_0$')\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Let's see what happens when the absorption cross section is lowered in case of a planar source. Try to lower it in several steps with 10%, 1% and 0.1% of the original value, what is your expectation, and what have you found? Conclude your results!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#your code comes here"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Change this line to your conclusion!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Experiment 2 : multiplying medium (k-eigenvalue problem)\n",
     "\n",
@@ -286,13 +285,12 @@
     "We have implemented the inverse power algorithm in function `invPow()`. You will only need to create matrix $\\underline{\\underline{B}}$ and run the code!\n",
     "\n",
     "**Note** within function `invPow()` we use `np.linalg.inv()` to invert the matrix and `@` stands for matrix multiplication. And `np.dot()` performs the dot product of the matrix and the vector."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def createB(nuSigma_f,N):\n",
     "    \"\"\"Function to create matrix B\n",
@@ -322,20 +320,20 @@
     "            converged = True\n",
     "        kold=k\n",
     "    return k, phi"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Now let's try this with some values. What is your expectation for the flux shape?"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "a=100\n",
     "D=3.85\n",
@@ -354,29 +352,30 @@
     "plt.xlabel('x')\n",
     "plt.ylabel(r'$\\phi(x)/\\phi_0$')\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Note that with little work you can modify the `invPow()` to see how the flux shape converges during the iteration. If you are interested, feel free to add that.\n",
     "\n",
     "What happens if we put a control rod into the reactor? Think, what modifications do you need to do to represent a control rod? (Hint: you do not need to modify `createA()` or `createB()` for this, it is enough to modify one or more elements of the already created matrices Note: you might experience an assymetric flux shape even if you modified the material properties in the center of the reactor. It might be possible that your flux profile has not converged yet. Also, since the initial guess of the flux shape is random, there is some randomness in the iterations. That said, if you run the code cell multiple times, you might experience that sometimes with less iterations you get a better result)."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#write your code here!"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Experiment 3\n",
     "\n",
@@ -396,13 +395,12 @@
     "- `enlow`, `enhigh` and `flux` store the information on the neutron spectrum which we obtained from a separate openMC calculation (this is the type of data we have tallied during the previous datalab).\n",
     "\n",
     "Let's load it, and see what we can do with them. (Note that as in Datalab 3, if you have difficulties downloading the cross section data from the KAERI site, you can try to access my homepage instead, where I have uploaded the same html file: just uncomment the `website='https://ezsolti.github.io/rfpxsdata/target=jeff3.2,92,235,9228,3,18'` line)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import urllib.request\n",
     "import ssl\n",
@@ -579,31 +577,32 @@
     "       0.23041776, 0.23530943, 0.22175108, 0.20061146, 0.16351667,\n",
     "       0.1452543 , 0.13621642, 0.1142683 , 0.0940825 , 0.0703381 ,\n",
     "       0.05378389, 0.03569159, 0.02324831, 0.01404995, 0.00785918])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The spectrum is now integrated over energy bins, and it contains 200 energy bins. If you execute the following code block you can plot it."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "plt.figure()\n",
     "plt.loglog((enlow+enhigh)/2,flux)\n",
     "plt.xlabel('Energy (eV)')\n",
     "plt.ylabel('Group flux per source particle')\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Therefore you will need to\n",
     "\n",
@@ -613,13 +612,12 @@
     "- calculate the one group cross section by weighting the continuous cross section with the spectrum. You can use the `np.trapz()` function for the integration.\n",
     "\n",
     "Your final result will be in barn units. If you needed macroscopic group cross sections, you have to multiply with the number density of the nuclide. If you would then multiply with the total flux (for this, one needs to know the power of the reactor), you would obtain the fission rate in U-235."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "energyC=#complete the line to calculate the midpoint energies\n",
     "fluxpE=#complete the line to calculate the spectrum\n",
@@ -632,44 +630,48 @@
     "\n",
     "xs51g=#calculate the 1group cross section\n",
     "print('1G xs: {:.2f}'.format(xs51g))\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Experiment 4 (optional)\n",
     "\n",
     "As mentioned before, it is possible to use Monte Carlo codes to obtain group cross sections. One needs to realize that evaluating group constants is not that different than using tallies with the right *scores* and *filters*. In fact openMC has a multi-group cross section module called `openmc.mgxs`.\n",
     "\n",
     "In the separate '7b-openmc_mgxs.ipynb' notebook you can find a demonstration for a simple slab reactor on how to use openMC for group cross section generation."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.2 64-bit"
   },
   "language_info": {
+   "name": "python",
+   "version": "3.9.2",
+   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   }
  },
  "nbformat": 4,
