--- a/Datalabs/Datalab07/7-NumericalDiffusion.ipynb
+++ b/Datalabs/Datalab07/7-NumericalDiffusion.ipynb
@@ -812,10 +812,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 256,
    "source": [
-    "binwidth = enhigh - enlow\n",
-    "energyC=enlow + binwidth/2 #midpoint energies\n",
+    "binwidth = enhigh-enlow\n",
+    "energyC = (enlow+enhigh)/2 #midpoint energies\n",
     "fluxpE=flux/binwidth\n",
     "\n",
     "plt.figure()\n",
@@ -824,7 +824,7 @@
     "\n",
     "xs5interp=np.interp(energyC, energy, xs)\n",
     "\n",
-    "xs51g= np.trapz(xs5interp*fluxpE) / np.trapz(fluxpE)\n",
+    "xs51g= np.trapz(xs5interp*fluxpE,x=energyC) / np.trapz(fluxpE,x=energyC)\n",
     "\n",
     "print('1G xs: {:.2f}'.format(xs51g))"
    ],
@@ -843,7 +843,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1G xs: 515.68\n"
+      "1G xs: 88.73\n"
      ]
     }
    ],
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 257,
    "source": [
     "fig, ax = plt.subplots(1,2,figsize=(12,4))\n",
     "ax[0].loglog(energy,xs)\n",
@@ -862,11 +862,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7feccfb02dc0>]"
+       "[<matplotlib.lines.Line2D at 0x7feccf87edc0>]"
       ]
      },
      "metadata": {},
-     "execution_count": 252
+     "execution_count": 257
     },
     {
      "output_type": "display_data",
