--- a/Datalabs/Datalab07/7-NumericalDiffusion.ipynb
+++ b/Datalabs/Datalab07/7-NumericalDiffusion.ipynb
@@ -824,7 +824,7 @@
     "\n",
     "xs5interp=np.interp(energyC, energy, xs)\n",
     "\n",
-    "xs51g= np.trapz(xs5interp*fluxpE,x=energyC) / np.trapz(fluxpE,x=energyC)\n",
+    "xs51g= np.trapz(xs5interp*fluxpE,x=energyC) / np.trapz(fluxpE,x=energyC) # formula above for the group cross section\n",
     "\n",
     "print('1G xs: {:.2f}'.format(xs51g))"
    ],
