--- a/Datalabs/Datalab07/7b-openmc_mgxs.ipynb
+++ b/Datalabs/Datalab07/7b-openmc_mgxs.ipynb
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "source": [
     "sp = openmc.StatePoint('statepoint.150.h5')\n",
     "fiss_1p = mgxs.FissionXS(domain=fuel,energy_groups=G1,by_nuclide=True)\n",
@@ -432,6 +432,27 @@
       "/usr/local/lib/python3.9/dist-packages/openmc/tallies.py:1278: RuntimeWarning: invalid value encountered in divide\n",
       "  data = self.std_dev[indices] / self.mean[indices]\n"
      ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "openmc_group_cross_section = fiss_1p.get_xs()[0][0]/fuelm.get_nuclide_atom_densities()['U235']\n",
+    "openmc_group_cross_section"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "90.05565799482736"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
     }
    ],
    "metadata": {}
@@ -486,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -507,6 +528,7 @@
     "xs5interp=np.interp(energyC,energy,xs)\n",
     "\n",
     "xs51g=np.trapz(xs5interp*fluxpE,energyC)/np.trapz(fluxpE,energyC)\n",
+    "\n",
     "print('own estimate: {:.2f} barn'.format(xs51g))\n",
     "#since openMC provides macroscopic cross sections, we will need to divide with the number density of U235\n",
     "print('openMC: {:.2f} barn'.format(fiss_1p.get_xs()[0,0]/fuelm.get_nuclide_atom_densities()['U235']))"
