--- a/Datalabs/Datalab06/6-openMCIntro.ipynb
+++ b/Datalabs/Datalab06/6-openMCIntro.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "source": [
     "name='Jens'"
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "source": [
     "import openmc\n",
     "import numpy as np\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "source": [
     "uo2 = openmc.Material(1, \"uo2\",temperature=1200)\n",
     "# Add nuclides to uo2\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "source": [
     "#!cat materials.xml"
    ],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
     "fuel_or = openmc.ZCylinder(r=0.41) #fuel cylinder with outer radius\n",
     "clad_ir = openmc.ZCylinder(r=0.42) #clad inner cylinder with inner radius\n",
@@ -189,7 +189,6 @@
     "clad = openmc.Cell(3, 'clad')\n",
     "clad.fill = zirconium\n",
     "clad.region = clad_region\n",
-    "\n",
     "\n",
     "pitch = 1.26\n",
     "#we define the x and y planes with boundary condition\n",
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "source": [
     "#!cat geometry.xml"
    ],
@@ -268,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "source": [
     "# Tally 1: energy spectrum in fuel\n",
     "cell_filter1 = openmc.CellFilter(fuel)\n",
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "source": [
     "energybins"
    ],
@@ -321,7 +320,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 8
     }
    ],
    "metadata": {}
@@ -335,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "source": [
     "#!cat tallies.xml"
    ],
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "source": [
     "point = openmc.stats.Point((0, 0, 0))\n",
     "src = openmc.Source(space=point)\n",
@@ -383,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "source": [
     "#!cat settings.xml"
    ],
@@ -401,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "source": [
     "#root.plot()\n",
     "# Create a plot\n",
@@ -426,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "source": [
     "root.plot()\n",
     "plt.show()"
@@ -460,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "source": [
     "import os\n",
     "os.system('rm s*h5')\n",
@@ -501,7 +500,7 @@
       "         License | https://docs.openmc.org/en/latest/license.html\n",
       "         Version | 0.14.0\n",
       "        Git SHA1 | fa2330103de61a864c958d1a7250f11e5dd91468\n",
-      "       Date/Time | 2024-03-10 12:52:38\n",
+      "       Date/Time | 2024-05-22 15:25:53\n",
       "   MPI Processes | 1\n",
       "  OpenMP Threads | 8\n",
       "\n",
@@ -547,119 +546,7 @@
       "       13/1    1.40654    1.42611 +/- 0.01039\n",
       "       14/1    1.41975    1.42452 +/- 0.00752\n",
       "       15/1    1.35049    1.40972 +/- 0.01591\n",
-      "       16/1    1.35101    1.39993 +/- 0.01626\n",
-      "       17/1    1.36966    1.39561 +/- 0.01441\n",
-      "       18/1    1.41081    1.39751 +/- 0.01262\n",
-      "       19/1    1.40701    1.39856 +/- 0.01118\n",
-      "       20/1    1.43368    1.40207 +/- 0.01060\n",
-      "       21/1    1.38356    1.40039 +/- 0.00974\n",
-      "       22/1    1.39644    1.40006 +/- 0.00889\n",
-      "       23/1    1.39902    1.39998 +/- 0.00818\n",
-      "       24/1    1.38967    1.39925 +/- 0.00761\n",
-      "       25/1    1.34804    1.39583 +/- 0.00786\n",
-      "       26/1    1.40568    1.39645 +/- 0.00738\n",
-      "       27/1    1.35506    1.39401 +/- 0.00735\n",
-      "       28/1    1.39418    1.39402 +/- 0.00693\n",
-      "       29/1    1.37888    1.39323 +/- 0.00660\n",
-      "       30/1    1.39597    1.39336 +/- 0.00626\n",
-      "       31/1    1.40424    1.39388 +/- 0.00598\n",
-      "       32/1    1.38059    1.39328 +/- 0.00573\n",
-      "       33/1    1.45132    1.39580 +/- 0.00603\n",
-      "       34/1    1.36744    1.39462 +/- 0.00590\n",
-      "       35/1    1.35681    1.39311 +/- 0.00585\n",
-      "       36/1    1.42066    1.39417 +/- 0.00572\n",
-      "       37/1    1.41163    1.39481 +/- 0.00554\n",
-      "       38/1    1.40502    1.39518 +/- 0.00536\n",
-      "       39/1    1.40127    1.39539 +/- 0.00517\n",
-      "       40/1    1.43729    1.39678 +/- 0.00519\n",
-      "       41/1    1.37453    1.39607 +/- 0.00507\n",
-      "       42/1    1.39813    1.39613 +/- 0.00491\n",
-      "       43/1    1.37592    1.39552 +/- 0.00480\n",
-      "       44/1    1.40033    1.39566 +/- 0.00466\n",
-      "       45/1    1.40942    1.39605 +/- 0.00454\n",
-      "       46/1    1.38398    1.39572 +/- 0.00442\n",
-      "       47/1    1.36013    1.39476 +/- 0.00441\n",
-      "       48/1    1.35204    1.39363 +/- 0.00443\n",
-      "       49/1    1.34896    1.39249 +/- 0.00447\n",
-      "       50/1    1.37858    1.39214 +/- 0.00437\n",
-      "       51/1    1.37482    1.39172 +/- 0.00428\n",
-      "       52/1    1.39242    1.39173 +/- 0.00418\n",
-      "       53/1    1.35492    1.39088 +/- 0.00417\n",
-      "       54/1    1.42376    1.39162 +/- 0.00414\n",
-      "       55/1    1.41666    1.39218 +/- 0.00409\n",
-      "       56/1    1.39181    1.39217 +/- 0.00400\n",
-      "       57/1    1.39497    1.39223 +/- 0.00391\n",
-      "       58/1    1.40678    1.39253 +/- 0.00384\n",
-      "       59/1    1.38414    1.39236 +/- 0.00377\n",
-      "       60/1    1.39676    1.39245 +/- 0.00369\n",
-      "       61/1    1.38713    1.39235 +/- 0.00362\n",
-      "       62/1    1.36062    1.39174 +/- 0.00360\n",
-      "       63/1    1.42979    1.39246 +/- 0.00360\n",
-      "       64/1    1.40931    1.39277 +/- 0.00355\n",
-      "       65/1    1.43828    1.39359 +/- 0.00358\n",
-      "       66/1    1.37693    1.39330 +/- 0.00353\n",
-      "       67/1    1.37668    1.39301 +/- 0.00348\n",
-      "       68/1    1.33855    1.39207 +/- 0.00355\n",
-      "       69/1    1.40814    1.39234 +/- 0.00350\n",
-      "       70/1    1.38574    1.39223 +/- 0.00344\n",
-      "       71/1    1.38067    1.39204 +/- 0.00339\n",
-      "       72/1    1.37800    1.39181 +/- 0.00334\n",
-      "       73/1    1.36429    1.39138 +/- 0.00332\n",
-      "       74/1    1.33131    1.39044 +/- 0.00340\n",
-      "       75/1    1.37017    1.39013 +/- 0.00336\n",
-      "       76/1    1.36913    1.38981 +/- 0.00332\n",
-      "       77/1    1.38975    1.38981 +/- 0.00327\n",
-      "       78/1    1.39069    1.38982 +/- 0.00322\n",
-      "       79/1    1.39294    1.38987 +/- 0.00318\n",
-      "       80/1    1.38895    1.38985 +/- 0.00313\n",
-      "       81/1    1.41754    1.39024 +/- 0.00311\n",
-      "       82/1    1.39858    1.39036 +/- 0.00307\n",
-      "       83/1    1.38852    1.39033 +/- 0.00303\n",
-      "       84/1    1.38141    1.39021 +/- 0.00299\n",
-      "       85/1    1.39771    1.39031 +/- 0.00295\n",
-      "       86/1    1.36358    1.38996 +/- 0.00293\n",
-      "       87/1    1.39705    1.39005 +/- 0.00290\n",
-      "       88/1    1.35955    1.38966 +/- 0.00288\n",
-      "       89/1    1.38209    1.38957 +/- 0.00285\n",
-      "       90/1    1.35732    1.38916 +/- 0.00284\n",
-      "       91/1    1.35354    1.38872 +/- 0.00284\n",
-      "       92/1    1.44113    1.38936 +/- 0.00288\n",
-      "       93/1    1.38954    1.38936 +/- 0.00284\n",
-      "       94/1    1.36940    1.38913 +/- 0.00282\n",
-      "       95/1    1.42151    1.38951 +/- 0.00281\n",
-      "       96/1    1.39775    1.38960 +/- 0.00278\n",
-      "       97/1    1.38995    1.38961 +/- 0.00275\n",
-      "       98/1    1.39978    1.38972 +/- 0.00272\n",
-      "       99/1    1.32935    1.38904 +/- 0.00277\n",
-      "      100/1    1.41385    1.38932 +/- 0.00276\n",
-      " Creating state point statepoint.100.h5...\n",
-      "\n",
-      " =======================>     TIMING STATISTICS     <=======================\n",
-      "\n",
-      " Total time for initialization     = 2.8845e+00 seconds\n",
-      "   Reading cross sections          = 2.8478e+00 seconds\n",
-      " Total time in simulation          = 3.9234e+01 seconds\n",
-      "   Time in transport only          = 3.8519e+01 seconds\n",
-      "   Time in inactive batches        = 1.3957e+00 seconds\n",
-      "   Time in active batches          = 3.7838e+01 seconds\n",
-      "   Time synchronizing fission bank = 5.6506e-02 seconds\n",
-      "     Sampling source sites         = 4.5112e-02 seconds\n",
-      "     SEND/RECV source sites        = 3.9838e-03 seconds\n",
-      "   Time accumulating tallies       = 5.7582e-01 seconds\n",
-      "   Time writing statepoints        = 2.1940e-02 seconds\n",
-      " Total time for finalization       = 6.5150e-03 seconds\n",
-      " Total time elapsed                = 4.2152e+01 seconds\n",
-      " Calculation Rate (inactive)       = 35824.4 particles/second\n",
-      " Calculation Rate (active)         = 11892.7 particles/second\n",
-      "\n",
-      " ============================>     RESULTS     <============================\n",
-      "\n",
-      " k-effective (Collision)     = 1.39313 +/- 0.00219\n",
-      " k-effective (Track-length)  = 1.38932 +/- 0.00276\n",
-      " k-effective (Absorption)    = 1.39215 +/- 0.00150\n",
-      " Combined k-effective        = 1.39275 +/- 0.00149\n",
-      " Leakage Fraction            = 0.00000 +/- 0.00000\n",
-      "\n"
+      "       16/1    1.35101    1.39993 +/- 0.01626\n"
      ]
     }
    ],
@@ -676,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "source": [
     "sp = openmc.StatePoint('statepoint.100.h5')\n",
     "sp.keff"
@@ -686,18 +573,18 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "1.3927492921762694+/-0.0014907267827736367"
+       "1.392749292176262+/-0.0014907267827806946"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "source": [
     "?sp"
    ],
@@ -707,7 +594,7 @@
      "name": "stdout",
      "text": [
       "\u001b[0;31mType:\u001b[0m        StatePoint\n",
-      "\u001b[0;31mString form:\u001b[0m <openmc.statepoint.StatePoint object at 0x7feabe632ac0>\n",
+      "\u001b[0;31mString form:\u001b[0m <openmc.statepoint.StatePoint object at 0x7f016ebca5b0>\n",
       "\u001b[0;31mFile:\u001b[0m        /usr/local/lib/python3.9/dist-packages/openmc/statepoint.py\n",
       "\u001b[0;31mDocstring:\u001b[0m  \n",
       "State information on a simulation at a certain point in time (at the end\n",
@@ -828,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "source": [
     "keff=sp.keff.nominal_value\n",
     "keff_error=sp.keff.std_dev\n",
@@ -839,7 +726,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1.3927492921762694 0.0014907267827736367\n"
+      "1.392749292176262 0.0014907267827806946\n"
      ]
     }
    ],
@@ -854,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "source": [
     "sp.tallies"
    ],
@@ -890,7 +777,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 19
     }
    ],
    "metadata": {}
@@ -906,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "source": [
     "tallydf1=sp.tallies[1].get_pandas_dataframe()\n",
     "tallydf1.head() #prints the first 5 rows"
@@ -1015,14 +902,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "source": [
     "tallydf1flux=tallydf1[tallydf1['score']=='flux']\n",
     "tallydf1fiss=tallydf1[tallydf1['score']=='fission']\n",
@@ -1125,7 +1012,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 21
     }
    ],
    "metadata": {}
@@ -1139,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "source": [
     "energy=(tallydf1flux['energy low [eV]']+tallydf1flux['energy high [eV]'])/2\n",
     "plt.figure()\n",
@@ -1175,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "source": [
     "deltaE=(tallydf1flux['energy high [eV]']-tallydf1flux['energy low [eV]'])\n",
     "plt.figure()\n",
@@ -1201,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "source": [
     "tally2 = sp.tallies[2].get_pandas_dataframe()\n",
     "tally2.head()"
@@ -1303,7 +1190,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 59
+     "execution_count": 24
     }
    ],
    "metadata": {}
@@ -1317,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "source": [
     "tally2flux = tally2[tally2['score']=='flux']\n",
     "energy=(tally2flux['energy low [eV]']+tally2flux['energy high [eV]'])/2\n",
@@ -1346,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "source": [
     "tally3 = sp.tallies[3].get_pandas_dataframe()\n",
     "tally3.head()"
@@ -1479,7 +1366,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 67
+     "execution_count": 26
     }
    ],
    "metadata": {}
@@ -1502,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "source": [
     "# fast neutrons\n",
     "tally_fast = tally3.loc[tally3[\"energy low [eV]\"] == 100000.0] # extract fast neutrons\n",
